--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,17 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section id="about">
-        <h1>About Me</h1>
-        <img src="headshot.jpg" alt="Your Name">
-        <p>Hello! I'm Parichit Upadhayay, and I'm studying Software Engineering Technology [AI].</p>
-        <p>My <a href="resume.pdf" target="_blank">resume</a>.</p>
-    </section>
-</body>
-</html>
+ <!-----META SECTION----->
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <title>Parichit's Portfolio</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <!-----MENU SECTION------>
+<div class="main-panel">
+    <div class="container">
+      <div class="width-33 logo">Port <span class="span-col">folio</span>
+      </div>
+      <div class="width-66">
+        <nav>
+          <a href="#">
+            <span class="span-col">Home</span>
+          </a>
+          <a href="about.html">About me</a>
+          <a href="projects.html">Projects</a>
+          <a href="services.html">My Services</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
+      </div>
+    </div>
+    <!------ABOUT US SECTION------>
+<div class="main-section bg-lightgrey">
+    <div class="container">
+      <div class="width-50">
+        <img src="/public/img/mypic.png" class="about-img">
+      </div>
+      <div class="width-50">
+        <div class="about-us">
+          <h2 class="heading-text">About Me</h2>
+          <h3>I am ready to intern.</h3>
+          <p>Hi, I am Parichit Upadhayay, From Nepal. <br>
+            I am currenly an AI student in Centennial college </p>
+            <div class="width-50 mt-20">
+            <table cellspacing="8" cellpadding="8">
+              <tr>
+                <th>Name:</th>
+                <td>Parichit Upadhayay</td>
+              </tr>
+              <tr>
+                <th>Email:</th>
+                <td> tsky0965@gmail.com</td>
+              </tr>
+              <tr>
+                <th>Birthday:</th>
+                <td> 14 October, 2004</td>
+              </tr>
+              <tr>
+                <th>Study:</th>
+                <td> Centennial College</td>
+              </tr>
+            </table>
+          </div>
+          <div class="width-50 mt-20">
+            <table cellspacing="8" cellpadding="8">
+              <tr>
+                <th>Phone:</th>
+                <td>(+1) 123-456-7899</td>
+              </tr>
+              <tr>
+                <th>City:</th>
+                <td>Toronto, Canada</td>
+              </tr>
+              <tr>
+                <th>Fav Language:</th>
+                <td> None</td>
+              </tr>
+              <tr>
+                <th>Intresting Lang:</th>
+                <td> C#</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  </body>
