--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,12 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<>, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hi</h1>
-</body>
-</html>
+ <!-----META SECTION----->
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <title>Parichit's Portfolio</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <!-----MENU SECTION------>
+<div class="main-panel">
+    <div class="container">
+      <div class="width-33 logo">Port <span class="span-col">folio</span>
+      </div>
+      <div class="width-66">
+        <nav>
+          <a href="#">
+            <span class="span-col">Home</span>
+          </a>
+          <a href="about.html">About me</a>
+          <a href="projects.html">Projects</a>
+          <a href="services.html">My Services</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
+      </div>
+    </div>
+<!-------------CONTACT US SECTION----------------------->
+<div class="main-section contact bg-lightgrey">
+    <div class="container">
+      <h2 class="heading-text">Get In Touch</h2>
+      <div class="width-100">
+        <form>
+          <input type="text" placeholder="Full Name...">
+          <input type="text" placeholder="Full Email Id...">
+          <input type="text" placeholder="Full Mobile No...">
+          <textarea placeholder="Enter Address...">< /textarea>
+          <button type="submit">Submit< /button>
+        </form>
+      </div>
+      <div class="width-33">
+        <h3>
+          <i class="fa fa-map-marker">< /i>
+        </h3>
+        <h4>Address</h4>
+        <p>186, 3rd floor, near Hotel Galaxy Star, Near Sargam Cinema, Zone-II,M P Nagar</p>
+      </div>
+      <div class="width-33">
+        <h3>
+          <i class="fa fa-phone">< /i>
+        </h3>
+        <h4>Phone</h4>
+        <p>+91 99 26 661 418</p>
+      </div>
+      <div class="width-33">
+        <h3>
+          <i class="fa fa-envelope-o">< /i>
+        </h3>
+        <h4>Email</h4>
+        <p>support@dezven.com</p>
+      </div>
+    </div>
+  </div>
+  </body>  
