--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -1,12 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
+ <!-----META SECTION----->
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <title>Parichit's Portfolio</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <!-----MENU SECTION------>
+<div class="main-panel">
+    <div class="container">
+      <div class="width-33 logo">Port <span class="span-col">folio</span>
+      </div>
+      <div class="width-66">
+        <nav>
+          <a href="#">
+            <span class="span-col">Home</span>
+          </a>
+          <a href="about.html">About me</a>
+          <a href="projects.html">Projects</a>
+          <a href="services.html">My Services</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
+      </div>
+    </div>
+    <!------SKILL SECTION------>
+<div class="main-section">
+    <div class="container">
+      <h2 class="heading-text">My services</h2>
+      <div class="width-50">
+        <div class="skill">
+          <b>HTML</b>
+          <span>7</span>
+          <div>
+            <span style="width:70%"></span>
+          </div>
+        </div>
+        <div class="skill">
+          <b>CSS</b>
+          <span>6</span>
+          <div>
+            <span style="width:60%"></span>
+          </div>
+        </div>
+        <div class="skill">
+          <b>JavaScript</b>
+          <span>5</span>
+          <div>
+            <span style="width:50%"></span>
+          </div>
+        </div>
+        <div class="skill">
+          <b>React js</b>
+          <span>3</span>
+          <div>
+            <span style="width:30%"></span>
+          </div>
+        </div>
+      </div>
+      <div class="width-50">
+        <div class="width-50">
+          <div role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="10" style="--value:70">Html 70</div>
+        </div>
+        <div class="width-50">
+          <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="--value:60">CSS 60</div>
+        </div>
+        <div class="width-50">
+          <div role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="--value:50">JS 50</div>
+        </div>
+        <div class="width-50">
+          <div role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="--value:30">Node-JS 30</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
-</html>
