--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -1,12 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>hola</h1>
+ <!-----META SECTION----->
+ <!DOCTYPE html>
+ <html>
+ <head>
+ <title>Parichit's Portfolio</title>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="style.css">
+ </head>
+ <body>
+    <!-----MENU SECTION------>
+<div class="main-panel">
+    <div class="container">
+      <div class="width-33 logo">Port <span class="span-col">folio</span>
+      </div>
+      <div class="width-66">
+        <nav>
+          <a href="#">
+            <span class="span-col">Home</span>
+          </a>
+          <a href="about.html">About me</a>
+          <a href="projects.html">Projects</a>
+          <a href="services.html">My Services</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
+      </div>
+    </div>
+  <!------SERVICE SECTION------>
+<div class="main-section">
+  <div class="container">
+    <h2 class="heading-text">My Services</h2>
+    <div class="width-50">
+      <div class="service-list">
+        <i class="fa fa-chrome"></i>
+        <h3>Web Development</h3>
+        <p>Devloping a website from scratch</p>
+      </div>
+    </div>
+    <div class="width-50">
+      <div class="service-list">
+        <i class="fa fa-instagram"></i>
+        <h3>Web Design</h3>
+        <p>Designing a website into eye pleasing.</p>
+      </div>
+    </div>
+    </div>
+    <div class="width-50">
+      <div class="service-list">
+        <i class="fa fa-video-camera"></i>
+        <h3>Video Editing</h3>
+        <p>Editing Video into your preference</p>
+      </div>
+    </div>
+    <div class="width-50">
+      <div class="service-list">
+        <i class="fa fa-apple"></i>
+        <h3>App Developing</h3>
+        <p>Devloping an app from scratch</p>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
-</html>
