Chnaged something in HTML CSS Router and other places

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -5,7 +5,7 @@
  <title>Parichit's Portfolio</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="Css/style.css">
  </head>
  <body>
     <!-----MENU SECTION------>
@@ -15,13 +15,12 @@
       </div>
       <div class="width-66">
         <nav>
-          <a href="#">
-            <span class="span-col">Home</span>
-          </a>
-          <a href="about.html">About me</a>
-          <a href="projects.html">Projects</a>
-          <a href="services.html">My Services</a>
-          <a href="contact.html">Contact Us</a>
+           
+            <a href="/">Home</a>
+            <a href="about">About me</a>
+            <a href="projects">Projects</a>
+            <a href="services">My Services</a>
+            <a href="contact">Contact Us</a>
         </nav>
       </div>
     </div>
@@ -34,30 +33,30 @@
           <input type="text" placeholder="Full Name...">
           <input type="text" placeholder="Full Email Id...">
           <input type="text" placeholder="Full Mobile No...">
-          <textarea placeholder="Enter Address...">< /textarea>
-          <button type="submit">Submit< /button>
+          <textarea placeholder="Enter Address..."></textarea>
+          <button type="submit">Submit</button>
         </form>
       </div>
       <div class="width-33">
         <h3>
-          <i class="fa fa-map-marker">< /i>
+          <i class="fa fa-map-marker"></i>
         </h3>
         <h4>Address</h4>
-        <p>186, 3rd floor, near Hotel Galaxy Star, Near Sargam Cinema, Zone-II,M P Nagar</p>
+        <p>Scarborough, Toronto</p>
       </div>
       <div class="width-33">
         <h3>
-          <i class="fa fa-phone">< /i>
+          <i class="fa fa-phone"></i>
         </h3>
         <h4>Phone</h4>
-        <p>+91 99 26 661 418</p>
+        <p>+(1) 123-456-7899</p>
       </div>
       <div class="width-33">
         <h3>
-          <i class="fa fa-envelope-o">< /i>
+          <i class="fa fa-envelope-o"></i>
         </h3>
         <h4>Email</h4>
-        <p>support@dezven.com</p>
+        <p>tsky0965@gmail.com</p>
       </div>
     </div>
   </div>
