--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,9 @@
  <title>Parichit's Portfolio</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="Css/style.css">
+
+<script src="https://use.fontawesome.com/releases/v6.4.2/js/all.js" crossorigin="anonymous"></script>
  </head>
  <body>
     <!-----MENU SECTION------>
@@ -15,13 +17,12 @@
       </div>
       <div class="width-66">
         <nav>
-          <a href="#">
-            <span class="span-col">Home</span>
-          </a>
-          <a href="about.ejs">About me</a>
-          <a href="projects.ejs">Projects</a>
-          <a href="services.ejs">My Services</a>
-          <a href="contact.ejs">Contact Us</a>
+          
+          <a href="/">Home</a>
+          <a href="about">About me</a>
+          <a href="projects">Projects</a>
+          <a href="services">My Services</a>
+          <a href="contact">Contact Us</a>
         </nav>
       </div>
     </div>
@@ -33,25 +34,25 @@
         <h1>Parichit <span class="span-col">Upadhayay</span>
         </h1>
         <h2>- I'm an AI student from Toronto.</h2>
-        <a href="#">
-          <i class="fa fa-facebook"></i>
+        <a href="facebook.com">
+          <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#">
-          <i class="fa fa-twitter"></i>
+        <a href="twitter">
+          <i class="fab fa-twitter"></i>
         </a>
-        <a href="#">
-          <i class="fa fa-linkedin"></i>
+        <a href="linkdein.com">
+          <i class="fab fa-linkedin"></i>
         </a>
-        <a href="#">
-          <i class="fa fa-instagram"></i>
+        <a href="instagram.com">
+          <i class="fab fa-instagram"></i>
         </a>
-        <a href="#">
-          <i class="fa fa-github"></i>
+        <a href="github.com">
+          <i class="fab fa-github"></i>
         </a>
       </div>
     </div>
     <div class="width-50">
-      <img src="logo.png">
+      <img src="img/logo.png">
     </div>
   </div>
   </div>
