--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,7 +5,7 @@
  <title>Parichit's Portfolio</title>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="Css/style.css">
  </head>
  <body>
     <!-----MENU SECTION------>
@@ -15,13 +15,12 @@
       </div>
       <div class="width-66">
         <nav>
-          <a href="#">
-            <span class="span-col">Home</span>
-          </a>
-          <a href="about.html">About me</a>
-          <a href="projects.html">Projects</a>
-          <a href="services.html">My Services</a>
-          <a href="contact.html">Contact Us</a>
+           
+            <a href="/">Home</a>
+            <a href="about">About me</a>
+            <a href="projects">Projects</a>
+            <a href="services">My Services</a>
+            <a href="contact">Contact Us</a>
         </nav>
       </div>
     </div>
@@ -29,7 +28,7 @@
 <div class="main-section bg-lightgrey">
     <div class="container">
       <div class="width-50">
-        <img src="/public/img/mypic.png" class="about-img">
+        <img src="/img/mypic.png" class="about-img">
       </div>
       <div class="width-50">
         <div class="about-us">
