--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -74,6 +74,10 @@
                 <th>Intresting Lang:</th>
                 <td> C#</td>
               </tr>
+              <tr>
+                <th>My Professional Resume</th>
+                <td> <a href="Resume/Professional resume 2.docx">Click Here</a></td>
+              </tr>
             </table>
           </div>
         </div>
