--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -1,4 +1,3 @@
- <!-----META SECTION----->
  <!DOCTYPE html>
  <html>
  <head>
@@ -8,14 +7,15 @@
  <link rel="stylesheet" href="Css/style.css">
  </head>
  <body>
-    <!-----MENU SECTION------>
+
 <div class="main-panel">
     <div class="container">
       <div class="width-33 logo">Port <span class="span-col">folio</span>
       </div>
       <div class="width-66">
         <nav>
-           
+
+               <!-----Inserting links ------>
             <a href="/">Home</a>
             <a href="about">About me</a>
             <a href="projects">Projects</a>
@@ -24,7 +24,7 @@
         </nav>
       </div>
     </div>
-    <!------ABOUT US SECTION------>
+    <!------ Creating divs and class------>
 <div class="main-section bg-lightgrey">
     <div class="container">
       <div class="width-50">
@@ -75,7 +75,7 @@
                 <td> C#</td>
               </tr>
               <tr>
-                <th>My Professional Resume</th>
+                <th>My Professional Resume</th>    <!-----Inserting resume------>
                 <td> <a href="Resume/Professional resume 2.docx">Click Here</a></td>
               </tr>
             </table>
