--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,4 +1,3 @@
- <!-----META SECTION----->
  <!DOCTYPE html>
  <html>
  <head>
@@ -8,14 +7,14 @@
  <link rel="stylesheet" href="Css/style.css">
  </head>
  <body>
-    <!-----MENU SECTION------>
-<div class="main-panel">
+
+  <div class="main-panel">
     <div class="container">
       <div class="width-33 logo">Port <span class="span-col">folio</span>
       </div>
       <div class="width-66">
         <nav>
-           
+          <!-----Inserting links ------>
             <a href="/">Home</a>
             <a href="about">About me</a>
             <a href="projects">Projects</a>
@@ -24,12 +23,13 @@
         </nav>
       </div>
     </div>
-<!-------------CONTACT US SECTION----------------------->
-<div class="main-section contact bg-lightgrey">
+    <!-----Creating div class ------>
+    <div class="main-section contact bg-lightgrey">
     <div class="container">
       <h2 class="heading-text">Get In Touch</h2>
       <div class="width-100">
         <form>
+        <!-----Creating a text area.------>
           <input type="text" placeholder="Full Name...">
           <input type="text" placeholder="Full Email Id...">
           <input type="text" placeholder="Full Mobile No...">
