--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,4 +1,3 @@
- <!-----META SECTION----->
  <!DOCTYPE html>
  <html>
  <head>
@@ -10,14 +9,14 @@
 <script src="https://use.fontawesome.com/releases/v6.4.2/js/all.js" crossorigin="anonymous"></script>
  </head>
  <body>
-    <!-----MENU SECTION------>
-<div class="main-panel">
+
+  <div class="main-panel">
     <div class="container">
       <div class="width-33 logo">Port <span class="span-col">folio</span>
       </div>
       <div class="width-66">
         <nav>
-          
+          <!-----Inserting links ------>
           <a href="/">Home</a>
           <a href="about">About me</a>
           <a href="projects">Projects</a>
@@ -26,7 +25,7 @@
         </nav>
       </div>
     </div>
-    <!------MAIN BANNERR------>
+<!----- Creating divs and classes------>
 <div class="container ">
     <div class="width-50">
       <div class="banner-section">
@@ -35,7 +34,7 @@
         </h1>
         <h2>- I'm an AI student from Toronto.</h2>
         <a href="facebook.com">
-          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook-f"></i> <!-----linking social media icons ------>
         </a>
         <a href="twitter">
           <i class="fab fa-twitter"></i>
