--- a/views/pages/services.ejs
+++ b/views/pages/services.ejs
@@ -1,4 +1,3 @@
- <!-----META SECTION----->
  <!DOCTYPE html>
  <html>
  <head>
@@ -8,14 +7,14 @@
  <link rel="stylesheet" href="Css/style.css">
  </head>
  <body>
-    <!-----MENU SECTION------>
-<div class="main-panel">
+
+  <div class="main-panel">
     <div class="container">
       <div class="width-33 logo">Port <span class="span-col">folio</span>
       </div>
       <div class="width-66">
         <nav>
-           
+           <!-----Inserting links ------>
             <a href="/">Home</a>
             <a href="about">About me</a>
             <a href="projects">Projects</a>
@@ -24,7 +23,7 @@
         </nav>
       </div>
     </div>
-  <!------SERVICE SECTION------>
+  <!-----Creating divs and class------>
 <div class="main-section">
   <div class="container">
     <h2 class="heading-text">My Services</h2>
